# testyolov5

./: gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  face_detection.cpp  face_detection.hpp  yolov5tfliteandroid.cpp
app/src/main/java/com/example/yolov5tfliteandroid/: MainActivity.java
app/src/main/java/com/example/yolov5tfliteandroid/analysis/: FullImageAnalyse.java  FullScreenAnalyse.java
app/src/main/java/com/example/yolov5tfliteandroid/detector/: Yolov5TFLiteDetector.java
app/src/main/java/com/example/yolov5tfliteandroid/helper/: FileHelper.java
app/src/main/java/com/example/yolov5tfliteandroid/holder/: FileAddressHolder.java  TarExtractor.java
app/src/main/java/com/example/yolov5tfliteandroid/userSelected/: InputSize.java  ModelAndLabel.java  OutputSize.java
app/src/main/java/com/example/yolov5tfliteandroid/utils/: FileUtils.java
app/src/main/res/layout/: activity_main.xml
